--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -1,11 +1,14 @@
-<div class='modal-background' on-tap='close' intro='fade' outro='fade'>
+<div class='modal-background' on-tap='bg-close' intro='fade' outro='fade'>
   <div class='modal-outer'>
     <div class='modal'>
       {{#details}}
-        <h3>{{dateDisplay}}</h3>
-        <div>Type of Incident: {{category}}</div>
-        <div>Severity: {{riskRating}}</div> 
-        <p>{{details}}     
+        <div class="modal-header">
+          <h3>{{dateDisplay}}</h3>
+          {{#riskRating}}<div class="severity"><span class="rating-{{riskRating}}">{{riskRating}}</span></div>{{/riskRating}} 
+          <div class="category">Type of Incident: {{category}}</div>
+          <a class="close" on-tap='close'></a>
+        </div>
+        <div class="modal-content"><p>{{details}} </p></div>
       {{/details}}
     </div>
   </div>
