--- a/src/js/text/gridItem.html
+++ b/src/js/text/gridItem.html
@@ -23,7 +23,7 @@
         <h3>{{key}}</h3>
         <div class="gridItems">
             {{#each values}}
-            <div class='gridItem {{riskRating}}' on-tap='showDetail' on-mouseover='showTooltip'>
+            <div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{category}},{{details}}'>
             </div>
             {{/each}}
         </div>
