--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -6,6 +6,7 @@
           <h3>{{dateDisplay}}</h3>
           {{#riskRating}}<div class="severity"><span class="rating-{{riskRating}}">{{riskRating}}</span></div>{{/riskRating}} 
           <div class="category">Type of Incident: {{type}}</div>
+          <div class="downgraded">Downgraded? {{downgraded}}</div>
           <a class="close" on-tap='close'></a>
         </div>
         <div class="modal-content"><p>{{description}} </p></div>
