add about modal

--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -9,7 +9,10 @@
           <div class="downgraded">Downgraded? {{downgraded}}</div>
           <a class="close" on-tap='close'></a>
         </div>
-        <div class="modal-content"><p>{{description}} </p></div>
+        <div class="modal-content">
+        <p>{{description}} </p>
+        <div class="share btn">tweet</div>
+        </div>
       {{/details}}
     </div>
   </div>
