update quote animation

--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-content">
         <p>{{description}} </p>
-        <div class="share btn">tweet</div>
+        <a href="{{tweetURL}}" class="share-twitter">Tweet</a>
         </div>
       {{/details}}
     </div>
