add new quotes and report function

--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -12,6 +12,8 @@
         <div class="modal-content">
         <p>{{description}} </p>
         <a href="{{tweetURL}}" class="share-twitter">Tweet</a>
+        <a id="report-modal" on-tap='showReport'>Report</a>
+        <div id="submit-msg">Your note has been submitted.</div>
         </div>
       {{/details}}
     </div>
