--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -80,13 +80,10 @@
             {{#each values}}
                 <h3>{{key}}</h3>
                 <div class="gridItems" id="{{key}}">
-                    {{#each values}}
-                    <div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}' {{#hasQuote}} data-aos="show-border" data-aos-offset="100" data-aos-delay="100" data-aos-duration="800"{{/hasQuote}}>
-                    </div>
-                    {{/each}}
+                    {{#each values}}{{#hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}' data-aos="show-border" data-aos-offset="100" data-aos-delay="200" data-aos-duration="800"></div>{{/hasQuote}}{{^hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}'></div>{{/hasQuote}}{{/each}}
                 </div>
                 {{#quote}}
-                    <div id="quote-{{id}}" class="quote-box" data-aos="fade" data-aos-offset="100" data-aos-delay="100" data-aos-duration="800">
+                    <div id="quote-{{id}}" class="quote-box" data-aos="fade" data-aos-offset="100" data-aos-delay="200" data-aos-duration="800">
                         <div class="quote-date">{{date}}</div>
                         <div class="quote-text">{{{quote}}}</div>
                     </div>
