--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -72,6 +72,15 @@
         </div>
 
     </div>
+    <div class="key">
+        <h3>Risk level key</h3>
+        <ul>
+            <li><div class="colour minor"></div> Minor</li>
+            <li><div class="colour major"></div> Major</li>
+            <li><div class="colour critical"></div> Critical</li>
+            <li><div class="colour other"></div> Information/Not Rated</li>            
+        </ul>
+    </div>
     {{#dataEmpty}}
         <div class="no-data">No entries found</div>
     {{/dataEmpty}}
