--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -3,7 +3,8 @@
         <span class="headerSmall">the</span>
         <div class="headerBig">Nauru files</div>
         <div class="subHeading">Three years of Asylum seekers' life in detention detailed in leaked database</div>
-        <div class="standfirst">Each of these squares is an incident reported by staff at the Nauru detention centre between 2013 and 2015. The incidents are categorised by severity, the type of incident, and whether a minor was involved. Click an incident to see expanded details. <a id="about-modal" on-tap='showAbout'>About the data</a>.</div>
+        <div class="standfirst">Each of these squares is an incident reported by staff at the Nauru detention centre between 2013 and 2015. The incidents are categorised by severity, the type of incident, and whether a minor was involved. Click an incident to see expanded details..</div>
+        <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
         <div class="byline"><a href="">Paul Farrell</a>, <a href="">Helen Davidson</a>, <a href="">Ri Liu</a> and <a href="">Nick Evershed</a></div>
         <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
     </div>
@@ -48,7 +49,7 @@
                 <option value="Minor">Minor</option>
                 <option value="Major">Major</option>
                 <option value="Critical">Critical</option>
-                <option value="Not rated">Not rated</option>
+                <option value="Unclassified">Unclassified</option>
                 <option value="Information">Information</option>
             </select>
         </div>
@@ -78,7 +79,7 @@
             <li><div class="colour minor"></div> Minor</li>
             <li><div class="colour major"></div> Major</li>
             <li><div class="colour critical"></div> Critical</li>
-            <li><div class="colour other"></div> Information/Not Rated</li>            
+            <li><div class="colour other"></div> Information/Unclassified</li>            
         </ul>
     </div>
     {{#dataEmpty}}
@@ -89,10 +90,10 @@
             {{#each values}}
                 <h3>{{key}}</h3>
                 <div class="gridItems" id="{{key}}">
-                    {{#each values}}{{#hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}' data-aos="show-border" data-aos-offset="100" data-aos-delay="200" data-aos-duration="800"></div>{{/hasQuote}}{{^hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}'></div>{{/hasQuote}}{{/each}}
+                    {{#each values}}{{#hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}' data-aos="show-border" data-aos-offset="200" data-aos-delay="200" data-aos-duration="800"></div>{{/hasQuote}}{{^hasQuote}}<div class='gridItem {{riskRating}}' on-tap='showDetail' decorator='tooltip:{{dateDisplay}},{{riskRating}},{{type}},{{description}}'></div>{{/hasQuote}}{{/each}}
                 </div>
                 {{#quote}}
-                    <div id="quote-{{id}}" class="quote-box" data-aos="fade" data-aos-offset="100" data-aos-delay="200" data-aos-duration="800">
+                    <div id="quote-{{id}}" class="quote-box" data-aos="fade" data-aos-offset="200" data-aos-delay="200" data-aos-duration="800">
                         <div class="quote-date">{{date}}</div>
                         <div class="quote-text">{{{quote}}}</div>
                     </div>
