add about the data content

--- a/src/js/text/aboutModal.html
+++ b/src/js/text/aboutModal.html
@@ -5,7 +5,101 @@
           <h3>About the Nauru files</h3>
           <a class="close" on-tap='close'></a>
         </div>
-        <div class="modal-content"><p>text</p></div>
+        <div class="modal-content">
+          <h4>What are the Nauru files?</h4>
+
+          <p>The Nauru files are the largest set of leaked documents published from inside Australia’s immigration detention system. They are a set of more than 2,000 incident reports from the Nauru detention centre, written by guards, caseworkers and teachers on the remote Pacific island. They set out every reportable “incident” on the island. An incident includes events such as self-harm attempts, sexual assaults, child abuse, voluntary hunger strikes, assaults, injuries and other forms of serious incidents. While some of these incidents have been reported sporadically in our news reports and in the reports of other news organisations, the logs set out in staggering detail the totality of harm caused by prolonged detention in Australia’s notorious offshore detention camps.</p>
+
+          <h4>What is an incident report?</h4>
+
+          <p>An incident report is a short summary of an event in the Nauru detention centre written by detention staff. They can range from an observation of a threat of self-harm, to abuse of a child, or a more mundane incident such as a child falling over when playing soccer. These reports form part of the contractual requirements set down by the Australian government in order to document and keep records of what is happening inside the detention system.</p>
+
+          <h4>What information does this interactive contain?</h4>
+
+          <p>This interactive contains the detailed incident reports as well as a “summary log” of each report. This summary log has been written by detention centre staff. The data has been grouped by month and year, by incident category and by risk rating. You can explore individual incidents, or search by type or timeframe. When you select an individual incident you can also share it across social networks.</p>
+
+          <h4>Who writes these reports?</h4>
+
+          <p>The Nauru files are a mosaic of individual incidents written up by dozens of different staff from within the detention centre on Nauru. The Australian government has privatised its immigration detention system and outsourced these services to private companies. Broadspectrum (formerly known as Transfield Services) manages the detention centre, and subcontracts security services to Wilson Security. International Health and Medical Services provides medical care. Save the Children provided welfare and childcare services until the end of 2015.</p>
+
+          <h4>When is an incident reportable and how are they rated and categorised?</h4>
+
+          <p>Incidents are reportable when they fall into one of the categories that have been set out in Transfield Services’ contract with the immigration detention. These reports are given a “risk rating” in three distinct categories: critical, major and critical.</p>
+
+          <p>Critical incidents must be reported verbally within 30 minutes and in writing within three hours. Major incidents must be reported verbally within an hour and in writing within six hours. Minor incidents don’t require a verbal report. A written report only needs to be filed within 24 hours. Timeframes for reporting incidents to the department are extremely important because failures to meet these deadlines can trigger financial penalties.</p>
+
+          <p>There is also a fourth rating that appears frequently in the logs: information reports. These types of reports do not appear to have any basis in the contract with Australia’s immigration department but they are an extremely common type of report.</p>
+
+          <p>Separately from risk rating, the reports are also broken down into classifications; for instance “concern for minor raised” and “self-harm threat” are discrete types of incident category.</p>
+
+          <p>Transfield Services outlined how reports should be categorised in its incident management framework of June 2013. An incident reporting matrix from 2014 [LINK TO LEAKED PDF] provides similar guidance.</p>
+
+          <h4>How accurate are the incident reports and their categorisation?</h4>
+
+          <p>The way incidents are categorised should be treated with some caution. The private companies that manage the detention centre have extremely poor data handling practices. Some incidents have also been deliberately downgraded in their seriousness. This means that the way incidents are categorised should be examined carefully.</p>
+
+          <p>There are examples of fairly severe incidents categorised as “information”, and examples of where incidents have been downgraded from a more severe category to a lesser one.</p>
+
+          <p>The types of category are applied inconsistently, if at all. Some of the ways the information has been categorised has also changed over time, leading to further inconsistencies in counting the data.</p>
+
+          <p>To present a useful summary of the incident database the Guardian has combined several similar categories, with the original details also preserved in our database [LINK TO INTERACTIVE, check that PDFs are indeed available]. These categories have been clearly marked in our publication of the database. The original incident reports can also be viewed individually and disclose how the information was initially reported.</p>
+
+          <h4>Has the Guardian changed or modified any of the data?</h4>
+
+          <p>The Guardian has redacted personal information in the files it has published. It has also sought to more clearly categorise some types of incident reports by grouping similar types of incidents when the reporting categories have changed over time. For instance, suicidal ideation has been grouped with threatened self-harm. All of the original incident reporting categories have been preserved in the files though, and this grouping has been clearly marked.</p>
+
+          <h4>What information has been redacted?</h4>
+           
+          <p>The Nauru files contain a large amount of personal information of asylum seekers and detention centre staff. The Guardian has adopted a stringent approach to redacting the documents, that includes several layers of editorial and technical checks of the data. The general approach we have taken is to remove:</p>
+
+          <ul>
+            <li>The names of all asylum seekers and staff</li>
+            <li>Personal identification numbers of asylum seekers (ie six digit identifier IDG-001)</li>
+            <li>Ages of asylum seekers named in reports</li>
+            <li>Signatures of detention staff</li>
+            <li>Nationalities with small population groups</li>
+            <li>Residential tent numbers</li>
+            <li>In some cases further identifying information has been removed where there is an enhanced risk of harm for individuals</li>
+          </ul>
+
+          <p>This approach to redacting the identities of asylum seekers and staff is consistent with the methodology taken by the former integrity commissioner Philip Moss in his review of sexual assault allegations at the centre.
+
+          <h4>What common terms and acronyms appear in the files?</h4>
+
+          <ul>
+          <li>NRPC This acronym refers to the Nauru regional processing centre (the detention centre).</li>
+
+          <li>SCA Save the Children Australia, contracted by the Australian government to provide welfare services on the island.</li>
+
+          <li>IHMS International Health and Medical Services, contracted to provide health services to asylum seekers.</li>
+
+          <li>TSA Transfield Services Australia, contracted to manage the Nauru detention centre.</li>
+
+          <li>DIBP Department of Immigration and Border Protection, the Australian government department responsible for overseeing the Nauru detention centre.</li>
+
+          <li>TIS Translating and Interpreting Service, which is a part of the immigration department that provides specialist translation services.</li>
+
+          <li>CPSW A Save the Children staff member who is a child protection and support worker</li>
+
+          <li>CW A Save the Children caseworker.</li>
+
+          <li>CM A Save the Children case manager.</li>
+
+          <li>CSO Client services officer. This is usually used to describe Wilson Security guards.</li>
+
+          <li>POI A person of interest, usually in relation to an allegation about their behaviour.</li>
+
+          <li>Whiskey A word used to describe Wilson Security officers.</li>
+
+          <li>Romeo Another word used to describe Wilson Security officers stationed around the Nauru detention centre.</li>
+
+          <li>Control A word used to describe the “control room” that Wilson Security runs. This room manages the reporting of incidents back to the Australian government.</li>
+
+          <li>OPC1, OPC2, OPC3/RPC1, RPC2, RPC3 Different compounds of the Nauru detention facility.</li>
+
+          <li>UAM An unaccompanied minor.</li>
+          </ul>
+        </div>
     </div>
   </div>
 </div>
