style about modal

--- a/src/js/text/aboutModal.html
+++ b/src/js/text/aboutModal.html
@@ -66,39 +66,39 @@
 
           <h4>What common terms and acronyms appear in the files?</h4>
 
-          <ul>
-          <li>NRPC This acronym refers to the Nauru regional processing centre (the detention centre).</li>
+          <dl>
+            <dt>NRPC</dt> <dd>This acronym refers to the Nauru regional processing centre (the detention centre).</dd>
 
-          <li>SCA Save the Children Australia, contracted by the Australian government to provide welfare services on the island.</li>
+            <dt>SCA</dt> <dd>Save the Children Australia, contracted by the Australian government to provide welfare services on the island.</dd>
 
-          <li>IHMS International Health and Medical Services, contracted to provide health services to asylum seekers.</li>
+            <dt>IHMS</dt> <dd>International Health and Medical Services, contracted to provide health services to asylum seekers.</dd>
 
-          <li>TSA Transfield Services Australia, contracted to manage the Nauru detention centre.</li>
+            <dt>TSA</dt> <dd>Transfield Services Australia, contracted to manage the Nauru detention centre.</dd>
 
-          <li>DIBP Department of Immigration and Border Protection, the Australian government department responsible for overseeing the Nauru detention centre.</li>
+            <dt>DIBP</dt> <dd>Department of Immigration and Border Protection, the Australian government department responsible for overseeing the Nauru detention centre.</dd>
 
-          <li>TIS Translating and Interpreting Service, which is a part of the immigration department that provides specialist translation services.</li>
+            <dt>TIS</dt> <dd>Translating and Interpreting Service, which is a part of the immigration department that provides specialist translation services.</dd>
 
-          <li>CPSW A Save the Children staff member who is a child protection and support worker</li>
+            <dt>CPSW</dt> <dd>A Save the Children staff member who is a child protection and support worker</dd>
 
-          <li>CW A Save the Children caseworker.</li>
+            <dt>CW</dt> <dd>A Save the Children caseworker.</dd>
 
-          <li>CM A Save the Children case manager.</li>
+            <dt>CM</dt> <dd>A Save the Children case manager.</dd>
 
-          <li>CSO Client services officer. This is usually used to describe Wilson Security guards.</li>
+            <dt>CSO</dt> <dd>Client services officer. This is usually used to describe Wilson Security guards.</dd>
 
-          <li>POI A person of interest, usually in relation to an allegation about their behaviour.</li>
+            <dt>POI</dt> <dd>A person of interest, usually in relation to an allegation about their behaviour.</dd>
 
-          <li>Whiskey A word used to describe Wilson Security officers.</li>
+            <dt>Whiskey</dt> <dd>A word used to describe Wilson Security officers.</dd>
 
-          <li>Romeo Another word used to describe Wilson Security officers stationed around the Nauru detention centre.</li>
+            <dt>Romeo</dt> <dd>Another word used to describe Wilson Security officers stationed around the Nauru detention centre.</dd>
 
-          <li>Control A word used to describe the “control room” that Wilson Security runs. This room manages the reporting of incidents back to the Australian government.</li>
+            <dt>Control</dt> <dd>A word used to describe the “control room” that Wilson Security runs. This room manages the reporting of incidents back to the Australian government.</dd>
 
-          <li>OPC1, OPC2, OPC3/RPC1, RPC2, RPC3 Different compounds of the Nauru detention facility.</li>
+            <dt>OPC1, OPC2, OPC3/RPC1, RPC2, RPC3</dt> <dd>Different compounds of the Nauru detention facility.</dd>
 
-          <li>UAM An unaccompanied minor.</li>
-          </ul>
+            <dt>UAM</dt> <dd>An unaccompanied minor.</dd>
+          </dl>
         </div>
     </div>
   </div>
