--- a/src/js/text/modal.html
+++ b/src/js/text/modal.html
@@ -5,7 +5,7 @@
         <div class="modal-header">
           <h3>{{dateDisplay}}</h3>
           {{#riskRating}}<div class="severity"><span class="rating-{{riskRating}}">{{riskRating}}</span></div>{{/riskRating}} 
-          <div class="category">Type of Incident: {{type}}</div>
+          <div class="category">Type of incident: {{type}}</div>
           <div class="downgraded">Downgraded? {{downgraded}}</div>
           <a class="close" on-tap='close'></a>
         </div>
