--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -2,10 +2,10 @@
     <div class="nauruHeader">
         <span class="headerSmall">the</span>
         <div class="headerBig">Nauru files</div>
-        <div class="subHeading">Three years of Asylum seekers' life in detention detailed in leaked database</div>
-        <div class="standfirst">Each of these squares is an incident reported by staff at the Nauru detention centre between 2013 and 2015. The incidents are categorised by severity, the type of incident, and whether a minor was involved. Click an incident to see expanded details..</div>
+        <div class="subHeading">The lives of asylum seekers in detention detailed in a unique database</div>
+        <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity, type and whether a child was involved. Click on a square to see expanded details. <b>Warning: these files contain details that may distress some readers</b></div>
         <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
-        <div class="byline"><a href="">Paul Farrell</a>, <a href="">Helen Davidson</a>, <a href="">Ri Liu</a> and <a href="">Nick Evershed</a></div>
+        <div class="byline"><a href="">Nick Evershed</a>,<a href="">Paul Farrell</a>, <a href="">Helen Davidson</a>, and <a href="">Ri Liu</a></div>
         <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
     </div>
 
@@ -23,10 +23,10 @@
         {{/years}}
     </div>
     <div class="month-bars">
-        <h2>Number of Incidents</h2>
+        <h2>Number of incidents</h2>
     </div>
     <div class="top-categories">
-        <h2>Most Occurrences</h2>
+        <h2>Most occurrences</h2>
         <div class="categories-col">
             {{#topCategories[0]:i}}
                 <div class="category">{{i+1}}. {{key}} <span class="count">{{values}}</span></div>
