--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -3,9 +3,9 @@
         <span class="headerSmall">the</span>
         <div class="headerBig">Nauru files</div>
         <div class="subHeading">The lives of asylum seekers in detention detailed in a unique database</div>
-        <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity, type and whether a child was involved. Click on a square to see expanded details. <b>Warning: these files contain details that may distress some readers</b></div>
+        <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity and type. Click on a square to see expanded details. <b>Warning: these files contain details that may distress some readers</b></div>
         <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
-        <div class="byline"><a href="">Nick Evershed</a>,<a href="">Paul Farrell</a>, <a href="">Helen Davidson</a>, and <a href="">Ri Liu</a></div>
+        <div class="byline"><a href="">Nick Evershed</a>, <a href="">Ri Liu</a>, <a href="">Paul Farrell</a>, and <a href="">Helen Davidson</a></div>
         <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
     </div>
 
